@@ -1,4 +1,4 @@
-# $Id: GLIFutureBar.py,v 1.1 2005/11/06 08:24:26 blackace Exp $
+# $Id: GLIFutureBar.py,v 1.2 2005/11/06 16:41:08 agaffney Exp $
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -19,145 +19,159 @@ import gtk
 
 class GLIFutureBar(gtk.HBox):
 
-  def __init__(self):
-    """
-    future bar
-    """
-    gtk.HBox.__init__(
-      self,
-      False,
-      5
-    )
-    self.set_border_width(5)
+	def __init__(self, titles):
+		"""
+		future bar
+		"""
+		gtk.HBox.__init__(
+			self,
+			False,
+			0
+		)
+		self.set_border_width(2)
 
-    # state
-    self.pos = 0
-    self.titles = [
-      "Welcome",
-      "Client Config",
-      "Partitioning",
-      "Network Mounts",
-      "Stage",
-      "Portage Tree",
-      "make.conf",
-      "Kernel",
-      "Bootloader",
-      "Timezone",
-      "Networking",
-      "Daemons",
-      "Extra Packages",
-      "rc.conf",
-      "Users",
-      "Review",
-    ]
+		# Widths
+		self.arrow_width = 20
+		self.text_width = 144
 
-    # markup
-    self.l2_color = "#ABA9A5"
-    self.l2_size = "-2"
-    self.l1_color = "#787674"
-    self.l1_size = "-1"
-    self.cur_color = "#000000"
-    self.cur_size = "-0"
-    self.arrowl = unichr(8672)
-    self.arrowr = unichr(8674)
+		# state
+		self.pos = 0
+		self.titles = titles
+#		self.titles = [
+#			"Welcome",
+#			"Client Config",
+#			"Partitioning",
+#			"Network Mounts",
+#			"Stage",
+#			"Portage Tree",
+#			"make.conf",
+#			"Kernel",
+#			"Bootloader",
+#			"Timezone",
+#			"Networking",
+#			"Daemons",
+#			"Extra Packages",
+#			"rc.conf",
+#			"Users",
+#			"Review",
+#		]
 
-    # l2 (level 2 on the left)
-    self.l2 = gtk.HBox(False, 0)
-    self.l2.label = gtk.Label()
-    self.l2.label.set_use_markup(True)
-    self.l2.pack_start(self.l2.label, True, True, 0)
-    self.l2.arrow = gtk.Label()
-    self.l2.arrow.set_use_markup(True)
-    self.l2.pack_start(self.l2.arrow, False, False, 0)
-    self.pack_start(self.l2, True, True, 0)
+		# markup
+		self.l2_color = "#ABA9A5"
+		self.l2_size = "-2"
+		self.l1_color = "#787674"
+		self.l1_size = "-1"
+		self.cur_color = "#000000"
+		self.cur_size = "-0"
+		self.arrowl = unichr(8672)
+		self.arrowr = unichr(8674)
 
-    # l1 (level 1 on the left)
-    self.l1 = gtk.HBox(False, 0)
-    self.l1.label = gtk.Label()
-    self.l1.label.set_use_markup(True)
-    self.l1.pack_start(self.l1.label, True, True, 0)
-    self.l1.arrow = gtk.Label()
-    self.l1.arrow.set_use_markup(True)
-    self.l1.pack_start(self.l1.arrow, False, False, 0)
-    self.pack_start(self.l1, True, True, 0)
+		# l2 (level 2 on the left)
+		self.l2 = gtk.HBox(False, 0)
+		self.l2.label = gtk.Label()
+		self.l2.label.set_use_markup(True)
+		self.l2.label.set_size_request(self.text_width, -1)
+		self.l2.pack_start(self.l2.label, True, True, 0)
+		self.l2.arrow = gtk.Label()
+		self.l2.arrow.set_use_markup(True)
+		self.l2.arrow.set_size_request(self.arrow_width, -1)
+		self.l2.pack_start(self.l2.arrow, False, False, 0)
+		self.pack_start(self.l2, True, True, 0)
 
-    # cur (current in the middle)
-    self.cur = gtk.Label()
-    self.cur.set_use_markup(True)
-    self.pack_start(self.cur, True, True, 0)
+		# l1 (level 1 on the left)
+		self.l1 = gtk.HBox(False, 0)
+		self.l1.label = gtk.Label()
+		self.l1.label.set_use_markup(True)
+		self.l1.label.set_size_request(self.text_width, -1)
+		self.l1.pack_start(self.l1.label, True, True, 0)
+		self.l1.arrow = gtk.Label()
+		self.l1.arrow.set_use_markup(True)
+		self.l1.arrow.set_size_request(self.arrow_width, -1)
+		self.l1.pack_start(self.l1.arrow, False, False, 0)
+		self.pack_start(self.l1, True, True, 0)
 
-    # r1 (level 1 on the right)
-    self.r1 = gtk.HBox(False, 0)
-    self.r1.arrow = gtk.Label()
-    self.r1.arrow.set_use_markup(True)
-    self.r1.pack_start(self.r1.arrow, False, False, 0)
-    self.r1.label = gtk.Label()
-    self.r1.label.set_use_markup(True)
-    self.r1.pack_start(self.r1.label, True, True, 0)
-    self.pack_start(self.r1, True, True, 0)
+		# cur (current in the middle)
+		self.cur = gtk.Label()
+		self.cur.set_use_markup(True)
+		self.cur.set_size_request(self.text_width, -1)
+		self.pack_start(self.cur, True, True, 0)
 
-    # r2 (level 2 on the right)
-    self.r2 = gtk.HBox(False, 0)
-    self.r2.arrow = gtk.Label()
-    self.r2.arrow.set_use_markup(True)
-    self.r2.pack_start(self.r2.arrow, False, False, 0)
-    self.r2.label = gtk.Label()
-    self.r2.label.set_use_markup(True)
-    self.r2.pack_start(self.r2.label, True, True, 0)
-    self.pack_start(self.r2, True, True, 0)
+		# r1 (level 1 on the right)
+		self.r1 = gtk.HBox(False, 0)
+		self.r1.arrow = gtk.Label()
+		self.r1.arrow.set_use_markup(True)
+		self.r1.arrow.set_size_request(self.arrow_width, -1)
+		self.r1.pack_start(self.r1.arrow, False, False, 0)
+		self.r1.label = gtk.Label()
+		self.r1.label.set_use_markup(True)
+		self.r1.label.set_size_request(self.text_width, -1)
+		self.r1.pack_start(self.r1.label, True, True, 0)
+		self.pack_start(self.r1, True, True, 0)
 
-    # init positions
-    self.setpos(0)
+		# r2 (level 2 on the right)
+		self.r2 = gtk.HBox(False, 0)
+		self.r2.arrow = gtk.Label()
+		self.r2.arrow.set_use_markup(True)
+		self.r2.arrow.set_size_request(self.arrow_width, -1)
+		self.r2.pack_start(self.r2.arrow, False, False, 0)
+		self.r2.label = gtk.Label()
+		self.r2.label.set_use_markup(True)
+		self.r2.label.set_size_request(self.text_width, -1)
+		self.r2.pack_start(self.r2.label, True, True, 0)
+		self.pack_start(self.r2, True, True, 0)
 
-  def getpos(self):
-    return self.pos
+		# init positions
+		self.setpos(0)
 
-  def setpos(self, pos):
-    if pos >= 0 and pos < len(self.titles):
-      # set position variable
-      self.pos = pos
-  
-      # create a reference label
-      label = gtk.Label("Hello")
-  
-      if (self.pos - 2) >= 0:
-        self.l2.label.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l2_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l2_color + "\">" + self.titles[self.pos - 2] + "</span>")
-        self.l2.arrow.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l2_size) + 7) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l2_color + "\">" + self.arrowl + "</span>")
-      else:
-        self.l2.label.set_markup("")
-        self.l2.arrow.set_markup("")
-  
-      if (self.pos - 1) >= 0:
-        self.l1.label.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l1_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l1_color + "\">" + self.titles[self.pos - 1] + "</span>")
-        self.l1.arrow.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l1_size) + 7) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l1_color + "\">" + self.arrowl + "</span>")
-      else:
-        self.l1.label.set_markup("")
-        self.l1.arrow.set_markup("")
-  
-      self.cur.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.cur_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.cur_color + "\">" + self.titles[self.pos] + "</span>")
-  
-      if (self.pos + 1) < len(self.titles):
-        self.r1.label.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l1_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l1_color + "\">" + self.titles[self.pos + 1] + "</span>")
-        self.r1.arrow.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l1_size) + 7) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l1_color + "\">" + self.arrowr + "</span>")
-      else:
-        self.r1.label.set_markup("")
-        self.r1.arrow.set_markup("")
-  
-      if (self.pos + 2) < len(self.titles):
-        self.r2.label.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l2_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l2_color + "\">" + self.titles[self.pos + 2] + "</span>")
-        self.r2.arrow.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l2_size) + 7) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l2_color + "\">" + self.arrowr + "</span>")
-      else:
-        self.r2.label.set_markup("")
-        self.r2.arrow.set_markup("")
+	def getpos(self):
+		return self.pos
 
-      self.show_all()
+	def setpos(self, pos):
+		if pos >= 0 and pos < len(self.titles):
+			# set position variable
+			self.pos = pos
+	
+			# create a reference label
+			label = gtk.Label("Hello")
+	
+			if (self.pos - 2) >= 0:
+				self.l2.label.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l2_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l2_color + "\">" + self.titles[self.pos - 2] + "</span>")
+				self.l2.arrow.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l2_size) + 7) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l2_color + "\">" + self.arrowl + "</span>")
+			else:
+				self.l2.label.set_markup("")
+				self.l2.arrow.set_markup("")
+	
+			if (self.pos - 1) >= 0:
+				self.l1.label.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l1_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l1_color + "\">" + self.titles[self.pos - 1] + "</span>")
+				self.l1.arrow.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l1_size) + 7) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l1_color + "\">" + self.arrowl + "</span>")
+			else:
+				self.l1.label.set_markup("")
+				self.l1.arrow.set_markup("")
+	
+			self.cur.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.cur_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.cur_color + "\">" + self.titles[self.pos] + "</span>")
+	
+			if (self.pos + 1) < len(self.titles):
+				self.r1.label.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l1_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l1_color + "\">" + self.titles[self.pos + 1] + "</span>")
+				self.r1.arrow.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l1_size) + 7) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l1_color + "\">" + self.arrowr + "</span>")
+			else:
+				self.r1.label.set_markup("")
+				self.r1.arrow.set_markup("")
+	
+			if (self.pos + 2) < len(self.titles):
+				self.r2.label.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l2_size)) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l2_color + "\">" + self.titles[self.pos + 2] + "</span>")
+				self.r2.arrow.set_markup("<span size=\"" + str(((label.get_pango_context().get_font_description().get_size() / 1024) + int(self.l2_size) + 7) * 1024) + "\" weight=\"bold\" foreground=\"" + self.l2_color + "\">" + self.arrowr + "</span>")
+			else:
+				self.r2.label.set_markup("")
+				self.r2.arrow.set_markup("")
 
-      return True
-    else:
-      return False
+			self.show_all()
 
-  def prev(self):
-    return self.setpos(self.pos - 1)
+			return True
+		else:
+			return False
 
-  def next(self):
-    return self.setpos(self.pos + 1)
+	def prev(self):
+		return self.setpos(self.pos - 1)
+
+	def next(self):
+		return self.setpos(self.pos + 1)
