@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.180 2005/11/06 00:17:56 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.181 2005/11/06 16:41:08 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Everybody loves Hypnotoad..err...Futurebar!
 
 *GLI-gtkfe-0.2 (27 Oct 2005)
 
